main - Jogo da Forca: Refatorando endpoint